// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<hr
  class="rmd-divider"
  role="separator"
/>
`;

exports[`Divider should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<hr
  class="rmd-divider custom-class-name"
  role="separator"
/>
`;

exports[`Divider should apply the correct styling, HTML attributes, and allow a ref 3`] = `
<hr
  class="rmd-divider rmd-divider--inset"
  role="separator"
/>
`;

exports[`Divider styling utility class should be callable without any arguments 1`] = `"rmd-divider"`;
